apps/commercial-store/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commercial-store-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - commercial-sto.ddns.net #commercial-store.ddns.net
    secretName: letsencrypt
  rules:
  - host: commercial-sto.ddns.net #commercial-store.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: commercial-store
            port:
              number: 80
